tests/fixtures/invalid/text-after-string.stderr
TOML parse error at line 1, column 41
  |
1 | string = "Is there life after strings?" No.
  |                                         ^
Unexpected `N`
Expected `a newline` or `end of input`
